--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@
             <div class="feedback">
                 <div class="form">
                   <form class="login-form" netlify>
+                    <input type="text" placeholder="Name">
                     <textarea type="text" placeholder="Write me a message or any feedback"></textarea>
                     <button type="submit">Send</button>
                   </form>
