--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
         <section class="last">
             <div class="feedback">
                 <div class="form">
-                  <form class="login-form" netlify>
+                  <form class="login-form" method="POST" data-netlify="true">
                     <input type="text" placeholder="Name">
                     <textarea type="text" placeholder="Write me a message or any feedback"></textarea>
                     <button type="submit">Send</button>
