Included some profiles at nav bar

--- a/index.html
+++ b/index.html
@@ -37,21 +37,20 @@
                             <a class="nav-link" href="#about">ABOUT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://www.behance.net/varshasharma12">PORTFOLIO</a>
+                            <a class="nav-link" href="https://www.behance.net/varshasharma12">behance</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/itsvarsharma">PROJECTS</a>
+                            <a class="nav-link" href="https://github.com/itsvarsharma">GITHUB</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">PAGES</a>
+                            <a class="nav-link" href="https://leetcode.com/itsvarsharma">LEETCODE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">BLOGS</a>
+                            <a class="nav-link" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#wrap-up">CONTACTS</a>
+                            <a class="nav-link" href="#contacts">CONTACTS</a>
                         </li>
-
                     </ul>
                 </div>
                 <!-- </div> -->
@@ -301,8 +300,7 @@
         <!-- ====================================Services=========================== -->
 
         <!-- =================================Projects================================= -->
-        <section>
-
+        <section id="projects">
             <div class="wrap">
                 <div class="row">
                     <div class="col-lg-12 text-center services-title">
@@ -403,8 +401,8 @@
 
         </section>
         <!-- =================================Projects================================= -->
-
-        <section class="last">
+        <!-- ====================feedback -->
+        <section class="last" >
             <div class="feedback">
                 <div class="form">
                   <form class="login-form" method="POST" data-netlify="true">
