--- a/index.html
+++ b/index.html
@@ -370,6 +370,20 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 tile">
+                    <img src='/img/projects/rps.png' />
+                    <div class="text">
+                        <h1 style="font-size: xx-large;">Rock-Paper-Scissors</h1>
+                        <h2 class="animate-text">"Revamp your RPS game experience."</h2>
+                        <p class="animate-text">Are you ready to take your Rock Paper Scissors game to the next level? 
+                            My interactive project offers a sleek and modern interface. 
+                            Experience the classic game like never before. </p>
+                        <div class="dots">
+                            <span><a style="color: aliceblue;"
+                                    href="https://github.com/itsvarsharma/Rock-Paper-Scissors/">Link</a></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 tile">
                     <img src='/img/projects/todo.png' />
                     <div class="text">
                         <h1>To Do List</h1>
