--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
         </div>
     </header>
     <!------------------------------ Navigation bar-------------------------- -->
-
     <!-- --------------------------------------Main area------------------------ -->
     <main class="site-main">
         <!--ssssssssssssssssssss Banner area sssssssssssssssssssssssss -->
@@ -415,6 +414,52 @@
 
         </section>
         <!-- =================================Projects================================= -->
+
+        <!-- ===============================Workshops and sessions ========================= -->
+        <section class="session">
+            <h1 class="text-uppercase title-text">Worskhops and Sessions</h1>
+
+            <a href="#0" class="banner" aria-label="View More">
+                <div class="banner__grid">
+                  <div aria-hidden="true">
+                    <figure class="banner__figure" style="background-image: url(img/sessions/design-oasis1.png);"></figure>
+                  </div>
+                  <div class="banner__text">
+                    <h2>Design Oasis: A 5 Day UI/UX Retreat</h2>
+                    <p>In Design Oasis, a workshop under UXcelerate, I conducted and instructed participants in the dynamic field of user experience design. 
+                        This immersive program equipped attendees with valuable insights into effective design principles, user research, and prototyping. 
+                        Through collaboration and creative thinking, participants left with a deeper understanding of UX design and the ability to create meaningful experiences. 
+                        Design Oasis - where creativity meets expertise.</p>
+              
+                    <p class="banner__link-wrapper">
+                      <span class="banner__link">
+                        <i>View More</i>
+                      </span>
+                    </p>
+                  </div>
+                </div>
+              </a>
+              <a href="#0" class="banner" aria-label="View More">
+                <div class="banner__grid">
+                  <div aria-hidden="true">
+                    <figure class="banner__figure" style="background-image: url(img/sessions/design-oasis2.png);"></figure>
+                  </div>
+                  <div class="banner__text">
+                    <h2>Design Oasis 2.0 : A 5 Day UI/UX Retreat</h2>
+                    <p>Conducted and instructed participants of second batch of Design Oasis in the dynamic field of user experience design.
+                    From exploring design principles to conducting user research and refining prototyping techniques, attendees experienced a 
+                    collaborative environment that fostered creativity and problem-solving. 
+                    </p>
+              
+                    <p class="banner__link-wrapper">
+                      <span class="banner__link">
+                        <i>View More</i>
+                      </span>
+                    </p>
+                  </div>
+                </div>
+              </a>
+        </section>
         <!-- ====================feedback -->
         <section class="last" >
             <div class="feedback">
