Added weather app

--- a/index.html
+++ b/index.html
@@ -356,6 +356,22 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 tile">
+                    <img src='/img/projects/weather.png' />
+                    <div class="text">
+                        <h1>Weather App</h1>
+                        <h2 class="animate-text">"Forecast. Simplified. Anywhere, anytime."</h2>
+                        <p class="animate-text">
+                            Stay informed and prepared with our weather app powered by OpenWeather API. 
+                            Accurate forecasts, real-time updates, and your personalized weather assistant. 
+                            Weather made simple, wherever you are.
+                        </p>
+                        <div class="dots">
+                            <span><a style="color: aliceblue;"
+                                    href="https://weather-by-itsvarsharma.netlify.app/">Link</a></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 tile">
                     <img src='/img/projects/erith.png' />
                     <div class="text">
                         <h1>Erith</h1>
@@ -410,6 +426,7 @@
                         </div>
                     </div>
                 </div>
+                
             </div>
 
         </section>
