--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
         <section class="session">
             <h1 class="text-uppercase title-text">Worskhops and Sessions</h1>
 
-            <a href="#0" class="banner" aria-label="View More">
+            <a href="https://www.linkedin.com/posts/itsvarsharma_uiuxdesign-designworkshop-figma-activity-7058320457845850112-jHgb?utm_source=share&utm_medium=member_desktop" class="banner" aria-label="View More">
                 <div class="banner__grid">
                   <div aria-hidden="true">
                     <figure class="banner__figure" style="background-image: url(img/sessions/design-oasis1.png);"></figure>
@@ -456,7 +456,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#0" class="banner" aria-label="View More">
+              <a href="https://www.linkedin.com/posts/itsvarsharma_designoasis2-uxcelerate-uiuxdesign-activity-7070615398685024256-7Swr?utm_source=share&utm_medium=member_desktop" class="banner" aria-label="View More">
                 <div class="banner__grid">
                   <div aria-hidden="true">
                     <figure class="banner__figure" style="background-image: url(img/sessions/design-oasis2.png);"></figure>
