--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                         <h4 class="title-text text-uppercase"> Developer | Designer | Artist</h4>
                         <div class="site-buttons">
                             <div class="d-flex flex-row flex wrap">
-                                <a href="mailto:itsvarsharma@gmail.com"
+                                <a href="mailto:itsvarsharma@gmail.com" target="_blank" rel="noopener noreferrer"
                                     class="btn button primary-button mr-4 text-uppercase">Hire me</a>
                                 <p>&nbsp &nbsp &nbsp</p>
-                                <a href="./Resume-Varsha.pdf"
+                                <a href="./Resume-Varsha.pdf" target="_blank" rel="noopener noreferrer"
                                     class="btn button secondary-button mr-4 text-uppercase">Get cv</a>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
                                 elevate your next design project.
                             </p>
                         </div>
-                        <a href="./Resume-Varsha.pdf" class="btn button primary-button mr-4 text-uppercase">download
+                        <a href="./Resume-Varsha.pdf" target="_blank" rel="noopener noreferrer" class="btn button primary-button mr-4 text-uppercase">download
                             cv</a>
                     </div>
                 </div>
@@ -200,7 +200,7 @@
                             <div class="d-flex-flex-row flex-wrap call-area">
                                 <span><i class="fa-solid fa-envelope fa-3x px-3"></i></span>
                                 <div class="call-now">
-                                    <a href="mailto:itsvarsharma@gmail.com" class="h4">EMAIL NOW</a>
+                                    <a href="mailto:itsvarsharma@gmail.com" target="_blank" rel="noopener noreferrer" class="h4">EMAIL NOW</a>
                                     <span> itsvarsharma@gmail.com</span>
                                 </div>
                             </div>
@@ -238,7 +238,7 @@
                                         With an eye for aesthetics and attention to detail, I create visually compelling
                                         designs that communicate brand messages effectively. </p>
                                     <h6 style="font-size: smaller; font-weight:400;"><a
-                                            href="https://behance.com/varshasharma12">Checkout more on Behance</a></h6>
+                                            href="https://behance.com/varshasharma12" target="_blank" rel="noopener noreferrer" >Checkout more on Behance</a></h6>
                                 </div>
                             </div>
                         </div>
@@ -254,7 +254,7 @@
                                         that improve overall usability and make complex tasks simple
                                     </p>
                                     <h6 style="font-size: smaller;font-weight:400;"> <a
-                                            href="https://behance.com/varshasharma12">Checkout more on Behance</a></h6>
+                                            href="https://behance.com/varshasharma12" target="_blank" rel="noopener noreferrer" >Checkout more on Behance</a></h6>
 
                                 </div>
                             </div>
@@ -271,7 +271,7 @@
                                         applications that meet client specifications and exceed their expectations
                                     </p>
                                     <h6 style="font-size: smaller;font-weight:400;"><a
-                                            href="https://github.com/itsvarsharma">Checkout more on GitHub</a></h6>
+                                            href="https://github.com/itsvarsharma" target="_blank" rel="noopener noreferrer" >Checkout more on GitHub</a></h6>
                                 </div>
                             </div>
                         </div>
@@ -286,7 +286,7 @@
                                         I have a strong foundation in data structures and algorithms, allowing me to
                                         develop efficient and optimized solutions to complex problems. </p>
                                     <h6 style="font-size: smaller;font-weight:400;"><a
-                                            href="https://behance.com/varshasharma12">Checkout more on Leetcode</a></h6>
+                                            href="https://behance.com/varshasharma12" target="_blank" rel="noopener noreferrer">Checkout more on Leetcode</a></h6>
 
                                 </div>
                             </div>
@@ -322,7 +322,7 @@
                         <p class="animate-text">Srijan is a website that offers personalized gifting solutions for all
                             occasions, providing a unique and memorable way to celebrate special moments. </p>
                         <div class="dots">
-                            <span><a style="color: aliceblue;" href="https://srijan2.netlify.app/">Link</a></span>
+                            <span><a style="color: aliceblue;" href="https://srijan2.netlify.app/" target="_blank" rel="noopener noreferrer" >Link</a></span>
                         </div>
                     </div>
                 </div>
@@ -338,7 +338,7 @@
                         </p>
                         <div class="dots">
                             <span><a style="color: aliceblue;"
-                                    href="https://graphical-password-authentication.netlify.app/">Link</a></span>
+                                    href="https://graphical-password-authentication.netlify.app/" target="_blank" rel="noopener noreferrer" >Link</a></span>
                         </div>
                     </div>
                 </div>
@@ -351,7 +351,7 @@
                         <p class="animate-text"> This project is a personal portfolio website designed to showcase your
                             skills, experiences, and achievements in a visually appealing and professional manner. </p>
                         <div class="dots">
-                            <span><a style="color: aliceblue;" href="https://itsvarsharma.netlify.app/">Link</a></span>
+                            <span><a style="color: aliceblue;" href="https://itsvarsharma.netlify.app/" target="_blank" rel="noopener noreferrer" >Link</a></span>
                         </div>
                     </div>
                 </div>
@@ -367,7 +367,7 @@
                         </p>
                         <div class="dots">
                             <span><a style="color: aliceblue;"
-                                    href="https://weather-by-itsvarsharma.netlify.app/">Link</a></span>
+                                    href="https://weather-by-itsvarsharma.netlify.app/" target="_blank" rel="noopener noreferrer" >Link</a></span>
                         </div>
                     </div>
                 </div>
@@ -380,7 +380,7 @@
                             calculations, offering all arithmatic operations to meet individual needs. </p>
                         <div class="dots">
                             <span><a style="color: aliceblue;"
-                                    href="https://erith-by-varsha.netlify.app/">Link</a></span>
+                                    href="https://erith-by-varsha.netlify.app/" target="_blank" rel="noopener noreferrer" >Link</a></span>
                         </div>
                     </div>
                 </div>
@@ -394,7 +394,7 @@
                             Experience the classic game like never before. </p>
                         <div class="dots">
                             <span><a style="color: aliceblue;"
-                                    href="https://github.com/itsvarsharma/Rock-Paper-Scissors/">Link</a></span>
+                                    href="https://github.com/itsvarsharma/Rock-Paper-Scissors/" target="_blank" rel="noopener noreferrer" >Link</a></span>
                         </div>
                     </div>
                 </div>
@@ -407,7 +407,7 @@
                             and manage their tasks efficiently, with a user-friendly interface. </p>
                         <div class="dots">
                             <span><a style="color: aliceblue;"
-                                    href="https://github.com/itsvarsharma/To-Do-List">Link</a></span>
+                                    href="https://github.com/itsvarsharma/To-Do-List" target="_blank" rel="noopener noreferrer" >Link</a></span>
                         </div>
                     </div>
                 </div>
@@ -422,7 +422,7 @@
                         </p>
                         <div class="dots">
                             <span><a style="color: aliceblue;"
-                                    href="https://github.com/itsvarsharma/Satkaar">Link</a></span>
+                                    href="https://github.com/itsvarsharma/Satkaar" target="_blank" rel="noopener noreferrer" >Link</a></span>
                         </div>
                     </div>
                 </div>
@@ -436,7 +436,7 @@
         <section class="session">
             <h1 class="text-uppercase title-text">Worskhops and Sessions</h1>
 
-            <a href="https://www.linkedin.com/posts/itsvarsharma_uiuxdesign-designworkshop-figma-activity-7058320457845850112-jHgb?utm_source=share&utm_medium=member_desktop" class="banner" aria-label="View More">
+            <a href="https://www.linkedin.com/posts/itsvarsharma_uiuxdesign-designworkshop-figma-activity-7058320457845850112-jHgb?utm_source=share&utm_medium=member_desktop" target="_blank" rel="noopener noreferrer" class="banner" aria-label="View More">
                 <div class="banner__grid">
                   <div aria-hidden="true">
                     <figure class="banner__figure" style="background-image: url(img/sessions/design-oasis1.png);"></figure>
@@ -456,7 +456,7 @@
                   </div>
                 </div>
               </a>
-              <a href="https://www.linkedin.com/posts/itsvarsharma_designoasis2-uxcelerate-uiuxdesign-activity-7070615398685024256-7Swr?utm_source=share&utm_medium=member_desktop" class="banner" aria-label="View More">
+              <a href="https://www.linkedin.com/posts/itsvarsharma_designoasis2-uxcelerate-uiuxdesign-activity-7070615398685024256-7Swr?utm_source=share&utm_medium=member_desktop" target="_blank" rel="noopener noreferrer" class="banner" aria-label="View More">
                 <div class="banner__grid">
                   <div aria-hidden="true">
                     <figure class="banner__figure" style="background-image: url(img/sessions/design-oasis2.png);"></figure>
