Added a new project

--- a/index.html
+++ b/index.html
@@ -379,6 +379,23 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 tile">
+                    <img src='/img/projects/colorpick.png' />
+                    <div class="text">
+                        <h1>Color Picker</h1>
+                        <h2 class="animate-text">Unleash Your Creative Color Palette</h2>
+                        <p class="animate-text">
+                            Discover, capture, and create with our Color Picker Chrome extension. 
+                            Instantly extract colors from any webpage and unleash your creativity. 
+                            Simplify your design workflow with ease.
+                        </p>
+                        <div class="dots">
+                            <span><a style="color: aliceblue;" href="https://github.com/itsvarsharma/ColorPicker"
+                                    target="_blank" rel="noopener noreferrer">Link</a></span>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 tile">
                     <img src='/img/projects/erith.png' />
                     <div class="text">
@@ -424,7 +441,7 @@
                     <img src='/img/projects/satkaar.png' />
                     <div class="text">
                         <h1>Satkaar</h1>
-                        <h2 class="animate-text">"Experience the warmth of a home away from home"</h2>
+                        <h2 class="animate-text">Experience the warmth of a home away from home</h2>
                         <p class="animate-text">
                             Satkaar provides unique homestay experiences, connecting travelers with local hosts and
                             promoting responsible and sustainable tourism.
