--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!------------------------------ Navigation bar-------------------------- -->
     <header class="header_area">
         <div class="main-menu">
+            
             <nav class="navbar navbar-expand-lg navbar-light fixed-top">
                 <!-- <div class="container-fluid"> -->
                 <a class="navbar-brand" href="#"><img src="./img/Varsha.png" alt="logo" width="70px"></a>
@@ -93,7 +94,7 @@
             <div class="containerfluid">
                 <div class="row">
                     <div class="col-lg-6 col-md-12 about-image">
-                        <img style="padding: 0.8rem 5rem; width: 40rem;" src="./img/about.avif" alt="">
+                        <img class="img-fluid" src="./img/about.avif" alt="">
                     </div>
                     <div class="col-lg-6 col-md-12 about-title">
                         <h2 class="text-uppercase pt-5">
