added js-based blockchain to project

--- a/index.html
+++ b/index.html
@@ -368,6 +368,20 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 tile">
+                    <img src='/img/projects/blockchain.png' />
+                    <div class="text">
+                        <h1>JavaScript based Blockchain</h1>
+                        <h2 class="animate-text">Your Data, Your Block, Your Security</h2>
+                        <p class="animate-text">
+                            Empower Data Ownership on the Blockchain. Add Your Blocks, Secure Your Data. A Decentralized Network for Everyone
+                        </p>
+                        <div class="dots">
+                            <span><a style="color: aliceblue;" href="https://github.com/itsvarsharma/BlockChainProject"
+                                    target="_blank" rel="noopener noreferrer">Link</a></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 tile">
                     <img src='/img/projects/weather.png' />
                     <div class="text">
                         <h1>Weather App</h1>
@@ -456,7 +470,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
 
         </section>
