--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
                                     <span>Working</span>
                                 </h2>
                             </div>
+                            <div class="mt-4"></div>
                             <div class="d-flex-flex-row flex-wrap call-area">
                                 <span><i class="fa-solid fa-envelope fa-3x px-3"></i></span>
                                 <div class="call-now">
@@ -297,7 +298,7 @@
                     <div class="card">
                         <img class="card-img-top" src="./img/chapters/gd.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title" style="color: var(--primary-color);">graphic design</h5>
+                            <h5 class="card-title text-uppercase" style="color: var(--primary-color);">graphic design</h5>
                             <p class="card-text">
                                 With an eye for aesthetics and attention to detail, I create visually compelling designs
                                 that communicate brand messages effectively.</p>
@@ -312,7 +313,7 @@
         </section>
 
         <!-- ====================================Services=========================== -->
-        <section class="center-image mt-4">
+        <section class="center-image mt-5 pt-5">
             <div class="container justify-items-center">
                 <div class="row">
                     <div class="col-lg-3 col-md-6">.</div>
