--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <section class="center-image mt-5 pt-5">
             <div class="container justify-items-center">
                 <div class="row">
-                    <div class="col-lg-3 col-md-6">.</div>
+                    <div class="col-lg-3 col-md-6"></div>
                     <div class="col-lg-6">
 
                         <img class="img-fluid" src="./img/floor.jpg" alt="">
