--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <div class="first-row row m-2 p-1 d-flex">
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
                                 <div class="single-brand">
-                                    <img class="img-fluid" src="./img/tools/Logo1.svg" alt="">
+                                    <img class="img-fluid" src="./img/tools/figma.webp" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
@@ -160,7 +160,7 @@
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6">
                                 <div class="single-brand">
-                                    <img class="img-fluid" src="./img/tools/Logo5.png" alt="">
+                                    <img class="img-fluid" src="./img/tools/canva.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6">
@@ -180,7 +180,7 @@
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6">
                                 <div class="single-brand">
-                                    <img class="img-fluid" src="./img/tools/Logo9.png" alt="">
+                                    <img class="img-fluid" src="./img/tools/html.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6">
